Adding copyright text in the simple.html file

--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--
+Copyright by: Kumbadev 2018
+-->
 <head>
 	<title>An Simple Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
