--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 Copyright by: Kumbadev 2018
 -->
 <head>
-	<title>An Simple Website</title>
+	<title>An Excellent Working Simple Website Page</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,11 +17,11 @@ Copyright by: Kumbadev 2018
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			This is my first Merge Example going to do in the github Super
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Kumbadev @ ss2018</p>
 	</footer>
 </body>
 </html>
