--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 Copyright by: Kumbadev 2018
-Second line for rebase example
+Second line for rebase example. Greatest video 
 -->
 <head>
 
@@ -20,11 +20,11 @@ Second line for rebase example
 	<!-- Content Goes Here -->
 		<p>
 
-			This is my first Merge Example going to do in the github Super
+			This is my first Merge Example going to do in the github Super. Great
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Kumbadev @ ss2018</p>
+		<p>&copy; Kumba @ 2018</p>
 	</footer>
 </body>
 </html>
