simple conflict issue fixed

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 Copyright by: Kumbadev 2018
-Second line for rebase example. Greatest video 
+Second line for rebase example. This is great thanks 
 -->
 <head>
 
@@ -20,7 +20,7 @@ Second line for rebase example. Greatest video
 	<!-- Content Goes Here -->
 		<p>
 
-			This is my first Merge Example going to do in the github Super. Great
+			This is my first Merge Example going to do in the github Super
 		</p>
 	</main>
 	<footer class="container">
