Local: remase commit

--- a/simple.html
+++ b/simple.html
@@ -24,7 +24,7 @@ Second line for rebase example. This is great thanks
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Kumba @ 2018</p>
+		<p>&copy; Kumba @ 2018 Copy rights reserved by Kumbadev</p>
 	</footer>
 </body>
 </html>
